--- a/Contacts.html
+++ b/Contacts.html
@@ -28,7 +28,7 @@
             <li>+235 9442636984</li>
             <li>BP:0128 N'DJAMENA-TCHAD</li>
          </ul>
-            <img src="./social/socialmedia.png" class="smd" height="200px" width="250px">
+            <img src="./socialmedia.png" class="smd" height="200px" width="250px">
 
     </div>
     <aside class="log">
