--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ La mission d’Ecoworld en Suisse symbolise cette volonté de construire des pon
                 <li><a href="">Mail: ecoworld@world-org.org</a></li>
                 <li>Tel: +235 9442636984</li>
             </ul>
-            <img src="./social/socialmedia.png" class="smd">
+            <img src="./socialmedia.png" class="smd">
 
         </div>
         <hr>
